--- a/i3/config
+++ b/i3/config
@@ -495,9 +495,9 @@ set $mediumgrey		#8b8b8b
 set $yellowbrown	#e1b700
 
 # define colors for windows:
-#class		        	border		bground		text		indicator	child_border
-client.focused		    	$lightblue	$darkblue	$white		$mediumgrey	$mediumgrey
-client.unfocused	    	$darkblue	$darkblue	$grey		$darkgrey	$darkgrey
+#class		        		border		bground		text		indicator	child_border
+client.focused		    	$lightblue	$darkblue	$white		#f3777b		#f3777b
+client.unfocused	    	$darkblue	$darkblue	$grey		$darkgrey	$yellowbrown
 client.focused_inactive		$darkblue	$darkblue	$grey		$black		$black
 client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 
