--- a/i3/config
+++ b/i3/config
@@ -494,9 +494,12 @@ set $grey		#b0b5bd
 set $mediumgrey		#8b8b8b
 set $yellowbrown	#e1b700
 
+#myColors
+set $pink		#f3777b
+
 # define colors for windows:
 #class		        		border		bground		text		indicator	child_border
-client.focused		    	$lightblue	$darkblue	$white		#f3777b		#f3777b
+client.focused		    	$lightblue	$darkblue	$white		$pink		$pink
 client.unfocused	    	$darkblue	$darkblue	$grey		$darkgrey	$yellowbrown
 client.focused_inactive		$darkblue	$darkblue	$grey		$black		$black
 client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
